<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/titre_appli"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:paddingBottom="16dp" />

        <Switch
            android:id="@+id/interrupteur_bloquee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bloquee"
            android:paddingBottom="16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/creneau_label"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner_creneau"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" />

        <LinearLayout
            android:id="@+id/bloc_creneau_personnalise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="16dp">

            <Button
                android:id="@+id/bouton_debut_appli"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/bouton_fin_appli"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quota_label"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/champ_quota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/quota_hint"
            android:paddingBottom="16dp" />

        <Switch
            android:id="@+id/interrupteur_session"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/utilisable_en_session" />

    </LinearLayout>

</ScrollView>
