<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/texte_sessions_restantes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:paddingBottom="16dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/session_max_label" />

    <EditText
        android:id="@+id/champ_session_max"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:paddingBottom="16dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/session_duree_label" />

    <EditText
        android:id="@+id/champ_session_duree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:paddingBottom="16dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/applis_session_titre"
        android:textStyle="bold"
        android:paddingBottom="4dp" />

    <TextView
        android:id="@+id/texte_applis_session"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
